# tauri-api-adapter

./: .prettierrc  Cargo.toml  README.md  package.json  pnpm-lock.yaml  turbo.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  jsr-publish.yml  npm-publish.yml  publish.yml
apps/desktop/: package.json
apps/desktop/dist-isolation/: index.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: sample-worker.ts  worker.ts
apps/desktop/src/routes/: +page.svelte
apps/desktop/src/routes/iframe/: +page.svelte
apps/extension/: package.json  svelte.config.js  vite.config.ts
apps/extension-spa/: package.json  vite.config.ts
apps/extension-spa/src/: App.svelte
apps/extension/src/: App.svelte
apps/extension/src/routes/: +page.svelte
apps/extension/src/routes/about/: +page.svelte
