[package]
name = "desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = ["isolation"] }

[dependencies]
tauri = { version = "2.0.0-beta.24", features = ["isolation", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-clipboard = "2.1.6"
tauri-plugin-shellx = "2.0.8"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-dialog = "2.0.0-beta.11"
tauri-plugin-notification = "2.0.0-beta.10"
tauri-plugin-os = "2.0.0-beta.8"
tauri-plugin-http = "2.0.0-beta.12"
tauri-plugin-network = "2.0.2"
tauri-plugin-system-info = "2.0.2"
tauri-plugin-log = "2.0.0-beta.8"
tauri-plugin-upload = "2.0.0-beta.9"
